gse.output
Terminals which are not used

   SCAN_FIELD


Grammar

    0 $accept: clause $end

    1 clause: identifier relop constant
    2       | constant relop identifier
    3       | constant relop identifier relop constant

    4 identifier: SCAN_WORD

    5 constant: SCAN_INT
    6         | SCAN_FLOAT

    7 relop: SCAN_EQUAL
    8      | SCAN_NOT_EQUAL
    9      | SCAN_GREATER
   10      | SCAN_GREATER_EQL
   11      | SCAN_LESS
   12      | SCAN_LESS_EQL


Terminals, with rules where they appear

$end (0) 0
error (256)
SCAN_INT (258) 5
SCAN_FLOAT (259) 6
SCAN_WORD (260) 4
SCAN_FIELD (261)
SCAN_EQUAL (262) 7
SCAN_NOT_EQUAL (263) 8
SCAN_GREATER (264) 9
SCAN_GREATER_EQL (265) 10
SCAN_LESS (266) 11
SCAN_LESS_EQL (267) 12


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
clause (14)
    on left: 1 2 3, on right: 0
identifier (15)
    on left: 4, on right: 1 2 3
constant (16)
    on left: 5 6, on right: 1 2 3
relop (17)
    on left: 7 8 9 10 11 12, on right: 1 2 3


state 0

    0 $accept: . clause $end

    SCAN_INT    shift, and go to state 1
    SCAN_FLOAT  shift, and go to state 2
    SCAN_WORD   shift, and go to state 3

    clause      go to state 4
    identifier  go to state 5
    constant    go to state 6


state 1

    5 constant: SCAN_INT .

    $default  reduce using rule 5 (constant)


state 2

    6 constant: SCAN_FLOAT .

    $default  reduce using rule 6 (constant)


state 3

    4 identifier: SCAN_WORD .

    $default  reduce using rule 4 (identifier)


state 4

    0 $accept: clause . $end

    $end  shift, and go to state 7


state 5

    1 clause: identifier . relop constant

    SCAN_EQUAL        shift, and go to state 8
    SCAN_NOT_EQUAL    shift, and go to state 9
    SCAN_GREATER      shift, and go to state 10
    SCAN_GREATER_EQL  shift, and go to state 11
    SCAN_LESS         shift, and go to state 12
    SCAN_LESS_EQL     shift, and go to state 13

    relop  go to state 14


state 6

    2 clause: constant . relop identifier
    3       | constant . relop identifier relop constant

    SCAN_EQUAL        shift, and go to state 8
    SCAN_NOT_EQUAL    shift, and go to state 9
    SCAN_GREATER      shift, and go to state 10
    SCAN_GREATER_EQL  shift, and go to state 11
    SCAN_LESS         shift, and go to state 12
    SCAN_LESS_EQL     shift, and go to state 13

    relop  go to state 15


state 7

    0 $accept: clause $end .

    $default  accept


state 8

    7 relop: SCAN_EQUAL .

    $default  reduce using rule 7 (relop)


state 9

    8 relop: SCAN_NOT_EQUAL .

    $default  reduce using rule 8 (relop)


state 10

    9 relop: SCAN_GREATER .

    $default  reduce using rule 9 (relop)


state 11

   10 relop: SCAN_GREATER_EQL .

    $default  reduce using rule 10 (relop)


state 12

   11 relop: SCAN_LESS .

    $default  reduce using rule 11 (relop)


state 13

   12 relop: SCAN_LESS_EQL .

    $default  reduce using rule 12 (relop)


state 14

    1 clause: identifier relop . constant

    SCAN_INT    shift, and go to state 1
    SCAN_FLOAT  shift, and go to state 2

    constant  go to state 16


state 15

    2 clause: constant relop . identifier
    3       | constant relop . identifier relop constant

    SCAN_WORD  shift, and go to state 3

    identifier  go to state 17


state 16

    1 clause: identifier relop constant .

    $default  reduce using rule 1 (clause)


state 17

    2 clause: constant relop identifier .
    3       | constant relop identifier . relop constant

    SCAN_EQUAL        shift, and go to state 8
    SCAN_NOT_EQUAL    shift, and go to state 9
    SCAN_GREATER      shift, and go to state 10
    SCAN_GREATER_EQL  shift, and go to state 11
    SCAN_LESS         shift, and go to state 12
    SCAN_LESS_EQL     shift, and go to state 13

    $default  reduce using rule 2 (clause)

    relop  go to state 18


state 18

    3 clause: constant relop identifier relop . constant

    SCAN_INT    shift, and go to state 1
    SCAN_FLOAT  shift, and go to state 2

    constant  go to state 19


state 19

    3 clause: constant relop identifier relop constant .

    $default  reduce using rule 3 (clause)
